fix: transparency section contrast

--- a/src/less/layouts/section-mission.less
+++ b/src/less/layouts/section-mission.less
@@ -107,8 +107,21 @@
         }
 
         h3 {
-            text-wrap: balance;
+            text-wrap: wrap;
         }
+
+        .breakpoint(small, {
+
+            padding-inline: 5%;
+
+            .button {
+                width: 100%;
+            }
+
+        });
+
+
+
     }
 
     &_transparency {
@@ -141,7 +154,13 @@
             top: 50%;
             left: 0%;
             
-            background-color: fade(black, 70%);
+            background-color: fade(@gradient-active, 30%);
+
+            .breakpoint(large, {
+                background-color: fade(darken(@gradient-active, 50%), 40%);
+            });
+
+            backdrop-filter: blur(2px);
 
             .breakpoint(large, {
 
@@ -157,7 +176,7 @@
             p {
                 width: 80%;
             }
-            
+
         }
 
     }
